--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="search-bar">
 
                 <input type="text" name="Search" placeholder="Search">
-                <button type="reset"><img src="./assires/search-logo.png" alt=""></button>
+                <button type="reset"><img src="search-logo.png" alt=""></button>
             </div>
         </div>
 
@@ -35,7 +35,7 @@
             <div class="card-1">
                 <div class="card-info-1">
                     <div class="card-date-1">
-                        <img src="./assires/timing-logo-removebg-preview.png" alt="">
+                        <img src="timing-logo-removebg-preview.png" alt="">
                         <span>Call of Duty: United Offensive (2004)</span>
                     </div>
                     <div class="card-ditail-1">
@@ -51,7 +51,7 @@
             <div class="card-2">
                 <div class="card-info">
                     <div class="card-date">
-                        <img src="./assires/timing-logo-removebg-preview.png" alt="">
+                        <img src="timing-logo-removebg-preview.png" alt="">
                         <span> Access on March 23, 2017,</span>
                     </div>
                     <div class="card-ditail">
@@ -66,7 +66,7 @@
             <div class="card-3">
                 <div class="card-info">
                     <div class="card-date">
-                        <img src="./assires/timing-logo-removebg-preview.png" alt="">
+                        <img src="timing-logo-removebg-preview.png" alt="">
                         <span> Access on March 23, 2017,</span>
                     </div>
                     <div class="card-ditail">
@@ -81,7 +81,7 @@
             <div class="card-4">
                 <div class="card-info">
                     <div class="card-date">
-                        <img src="./assires/timing-logo-removebg-preview.png" alt="">
+                        <img src="timing-logo-removebg-preview.png" alt="">
                         <span> Access on March 23, 2017,</span>
                     </div>
                     <div class="card-ditail">
@@ -96,7 +96,7 @@
             <div class="card-5">
                 <div class="card-info">
                     <div class="card-date">
-                        <img src="./assires/timing-logo-removebg-preview.png" alt="">
+                        <img src="timing-logo-removebg-preview.png" alt="">
                         <span> Access on March 23, 2017,</span>
                     </div>
                     <div class="card-ditail">
@@ -119,7 +119,7 @@
         <div class="main-content">
             <div class="news">
                 <div class="news-1">
-                    <img src="./assires/news-1.jpg" alt="" class="news-1">
+                    <img src="news-1.jpg" alt="" class="news-1">
                     <h3>PUBG: Battlegrounds (previously titled PlayerUnknown's Battlegrounds) is a 2017 battle royale
                         video
                         game published by Krafton, and developed by Krafton's PUBG</h3>
@@ -133,13 +133,13 @@
                     </p>
                 </div>
                 <div class="news-2">
-                    <img src="./assires/news-2.jpg" alt="" class="news-2">
+                    <img src="news-2.jpg" alt="" class="news-2">
                     <h3>A free-to-play survival shooter accessible to almost all smartphones across the globe. Take on
                         foes
                         in Battle Royale, Clash Squad, and other exciting modes</h3>
                 </div>
                 <div class="news-3">
-                    <img src="./assires/news-3.jpg" alt="">
+                    <img src="news-3.jpg" alt="">
 
                     <h3>Call of Duty is a first-person shooter military video game series and media franchise published
                         by
@@ -148,12 +148,12 @@
             </div>
             <div class="socail-img">
                 <div class="stay-connected">
-                    <div><img src="./assires/facebook-img.png" alt=""></div>
-                    <div><img src="./assires/google-img.png" alt=""></div>
-                    <div><img src="./assires/instagram-img.jpg" alt=""></div>
-                    <div><img src="./assires/twitter-img.png" alt=""></div>
-                    <div><img src="./assires/whatsapp-img.jpg" alt=""></div>
-                    <div><img src="./assires/youtube-img.jpg" alt=""></div>
+                    <div><img src="facebook-img.png" alt=""></div>
+                    <div><img src="google-img.png" alt=""></div>
+                    <div><img src="instagram-img.jpg" alt=""></div>
+                    <div><img src="twitter-img.png" alt=""></div>
+                    <div><img src="whatsapp-img.jpg" alt=""></div>
+                    <div><img src="youtube-img.jpg" alt=""></div>
 
                 </div>
                 <br><br><br>
@@ -163,53 +163,53 @@
                 <div>
                     <hr class="line-breck">
                 </div>
-                <div class="viewe-info"><img src="./assires/card-1bg.jpg" alt="">
+                <div class="viewe-info"><img src="card-1bg.jpg" alt="">
                     <div class="viewe-detals ">
                         <h3>Call of Duty is a first-person shooter military video game series and media</h3>
                         <div class="viewe-logo">
-                            <div class="login-logo"><img src="./assires/login-logo.png" alt=""><span>Admin</span></div>
-                            <div class="date-logo"><img src="./assires/timing-logo2-fotor-bg-remover-20251022131820.png"
+                            <div class="login-logo"><img src="login-logo.png" alt=""><span>Admin</span></div>
+                            <div class="date-logo"><img src="timing-logo2-fotor-bg-remover-20251022131820.png"
                                     alt=""><span>07/05/2003</span></div>
                         </div>
                     </div>
                 </div>
-                <div class="viewe-info"><img src="./assires/card-2bg.jpg" alt="">
+                <div class="viewe-info"><img src="card-2bg.jpg" alt="">
                     <div class="viewe-detals ">
                         <h3>PUBG: Battlegrounds (previously titled PlayerUnknown's Battlegrounds) </h3>
                         <div class="viewe-logo">
-                            <div class="login-logo"><img src="./assires/login-logo.png" alt=""><span>Admin</span></div>
-                            <div class="date-logo"><img src="./assires/timing-logo2-fotor-bg-remover-20251022131820.png"
+                            <div class="login-logo"><img src="login-logo.png" alt=""><span>Admin</span></div>
+                            <div class="date-logo"><img src="timing-logo2-fotor-bg-remover-20251022131820.png"
                                     alt=""><span>25/08/2017</span></div>
                         </div>
                     </div>
                 </div>
-                <div class="viewe-info"><img src="./assires/card-3bg.jpg" alt="">
+                <div class="viewe-info"><img src="card-3bg.jpg" alt="">
                     <div class="viewe-detals ">
                         <h3>A free-to-play survival shooter accessible to almost all smartphones across the globe.</h3>
                         <div class="viewe-logo">
-                            <div class="login-logo"><img src="./assires/login-logo.png" alt=""><span>Admin</span></div>
-                            <div class="date-logo"><img src="./assires/timing-logo2-fotor-bg-remover-20251022131820.png"
+                            <div class="login-logo"><img src="login-logo.png" alt=""><span>Admin</span></div>
+                            <div class="date-logo"><img src="timing-logo2-fotor-bg-remover-20251022131820.png"
                                     alt=""><span>10/02/2019</span></div>
                         </div>
                     </div>
                 </div>
-                <div class="viewe-info"><img src="./assires/card-4bg.jpg" alt="">
+                <div class="viewe-info"><img src="card-4bg.jpg" alt="">
                     <div class="viewe-detals ">
                         <h3>The game, which was inspired by the Japanese film Battle Royale (2000), is based on previous
                             mods created by </h3>
                         <div class="viewe-logo">
-                            <div class="login-logo"><img src="./assires/login-logo.png" alt=""><span>Admin</span></div>
-                            <div class="date-logo"><img src="./assires/timing-logo2-fotor-bg-remover-20251022131820.png"
+                            <div class="login-logo"><img src="login-logo.png" alt=""><span>Admin</span></div>
+                            <div class="date-logo"><img src="timing-logo2-fotor-bg-remover-20251022131820.png"
                                     alt=""><span>07/05/2000</span></div>
                         </div>
                     </div>
                 </div>
-                <div class="viewe-info"><img src="./assires/card-5bg.png" alt="">
+                <div class="viewe-info"><img src="card-5bg.png" alt="">
                     <div class="viewe-detals ">
                         <h3>HAMZA HUSSAIN </h3>
                         <div class="viewe-logo">
-                            <div class="login-logo"><img src="./assires/login-logo.png" alt=""><span>Admin</span></div>
-                            <div class="date-logo"><img src="./assires/timing-logo2-fotor-bg-remover-20251022131820.png"
+                            <div class="login-logo"><img src="login-logo.png" alt=""><span>Admin</span></div>
+                            <div class="date-logo"><img src="timing-logo2-fotor-bg-remover-20251022131820.png"
                                     alt=""><span>10/22/2025</span></div>
                         </div>
                     </div>
@@ -225,13 +225,13 @@
                         Web Developer & Designer</h3>
                     <div class="socail-link">
                         <h3>Socail LINK</h3>
-                        <a href=""> <img src="./assires/facebook-img.png" alt=""></a>
-                        <a href=""> <img src="./assires/twitter-img.png" alt=""></a>
-                        <a href=""><img src="./assires/whatsapp-img.jpg" alt=""></a>
+                        <a href=""> <img src="facebook-img.png" alt=""></a>
+                        <a href=""> <img src="twitter-img.png" alt=""></a>
+                        <a href=""><img src="whatsapp-img.jpg" alt=""></a>
                     </div>
                 </div>
                 <div class="profile">
-                    <img src="./assires/profile-img.jpg" alt="">
+                    <img src="profile-img.jpg" alt="">
                     <div class="profile-name">
                         <h2>Name / credit</h2>
                         <h3>HAMZA HUSSAIN</h3>
@@ -247,5 +247,6 @@
         </div>
     </footer>
 </body>
+
 
 </html>
