--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <h3>Call of Duty is a first-person shooter military video game series and media</h3>
                         <div class="viewe-logo">
                             <div class="login-logo"><img src="login-logo.png" alt=""><span>Admin</span></div>
-                            <div class="date-logo"><img src="timing-logo-removebg-preview"
+                            <div class="date-logo"><img src="timing-logo-removebg-preview.png"
                                     alt=""><span>07/05/2003</span></div>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
                         <h3>PUBG: Battlegrounds (previously titled PlayerUnknown's Battlegrounds) </h3>
                         <div class="viewe-logo">
                             <div class="login-logo"><img src="login-logo.png" alt=""><span>Admin</span></div>
-                            <div class="date-logo"><img src="timing-logo-removebg-preview"
+                            <div class="date-logo"><img src="timing-logo-removebg-preview.png"
                                     alt=""><span>25/08/2017</span></div>
                         </div>
                     </div>
@@ -188,7 +188,7 @@
                         <h3>A free-to-play survival shooter accessible to almost all smartphones across the globe.</h3>
                         <div class="viewe-logo">
                             <div class="login-logo"><img src="login-logo.png" alt=""><span>Admin</span></div>
-                            <div class="date-logo"><img src="timing-logo-removebg-preview"
+                            <div class="date-logo"><img src="timing-logo-removebg-preview.png"
                                     alt=""><span>10/02/2019</span></div>
                         </div>
                     </div>
@@ -199,7 +199,7 @@
                             mods created by </h3>
                         <div class="viewe-logo">
                             <div class="login-logo"><img src="login-logo.png" alt=""><span>Admin</span></div>
-                            <div class="date-logo"><img src="timing-logo-removebg-preview"
+                            <div class="date-logo"><img src="timing-logo-removebg-preview.png"
                                     alt=""><span>07/05/2000</span></div>
                         </div>
                     </div>
@@ -209,7 +209,7 @@
                         <h3>HAMZA HUSSAIN </h3>
                         <div class="viewe-logo">
                             <div class="login-logo"><img src="login-logo.png" alt=""><span>Admin</span></div>
-                            <div class="date-logo"><img src="timing-logo-removebg-preview"
+                            <div class="date-logo"><img src="timing-logo-removebg-preview.png"
                                     alt=""><span>10/22/2025</span></div>
                         </div>
                     </div>
@@ -250,4 +250,5 @@
 
 
 </html>
+
 
