--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
             <div class="news">
                 <div class="news-1">
                     <img src="news-1.jpg" alt="" class="news-1">
-                    <h3>PUBG: Battlegrounds (previously titled PlayerUnknown's Battlegrounds) is a 2017 battle royale
+                    <h3 style="color: white;">PUBG: Battlegrounds (previously titled PlayerUnknown's Battlegrounds) is a 2017 battle royale
                         video
                         game published by Krafton, and developed by Krafton's PUBG</h3>
-                    <p> The game, which was inspired by the Japanese film Battle Royale (2000), is based on previous
+                    <p style="color: white;"> The game, which was inspired by the Japanese film Battle Royale (2000), is based on previous
                         mods
                         created by Brendan "PlayerUnknown" Greene for other games, and expanded into a standalone game
                         under
@@ -134,14 +134,14 @@
                 </div>
                 <div class="news-2">
                     <img src="news-2.jpg" alt="" class="news-2">
-                    <h3>A free-to-play survival shooter accessible to almost all smartphones across the globe. Take on
+                    <h3 style="color: white;">A free-to-play survival shooter accessible to almost all smartphones across the globe. Take on
                         foes
                         in Battle Royale, Clash Squad, and other exciting modes</h3>
                 </div>
                 <div class="news-3">
                     <img src="news-3.jpg" alt="">
 
-                    <h3>Call of Duty is a first-person shooter military video game series and media franchise published
+                    <h3 style="color: white;">Call of Duty is a first-person shooter military video game series and media franchise published
                         by
                         Activision, starting in 2003.</h3>
                 </div>
@@ -165,52 +165,52 @@
                 </div>
                 <div class="viewe-info"><img src="card-1bg.jpg" alt="">
                     <div class="viewe-detals ">
-                        <h3>Call of Duty is a first-person shooter military video game series and media</h3>
+                        <h3 style="color: white;">Call of Duty is a first-person shooter military video game series and media</h3>
                         <div class="viewe-logo">
-                            <div class="login-logo"><img src="login-logo.png" alt=""><span>Admin</span></div>
+                            <div class="login-logo"><img src="login-logo.png" alt=""><span style="color: white;">Admin</span></div>
                             <div class="date-logo"><img src="timing-logo-removebg-preview.png"
-                                    alt=""><span>07/05/2003</span></div>
+                                    alt=""><span style="color: white;">07/05/2003</span></div>
                         </div>
                     </div>
                 </div>
                 <div class="viewe-info"><img src="card-2bg.jpg" alt="">
                     <div class="viewe-detals ">
-                        <h3>PUBG: Battlegrounds (previously titled PlayerUnknown's Battlegrounds) </h3>
+                        <h3 style="color: white;">PUBG: Battlegrounds (previously titled PlayerUnknown's Battlegrounds) </h3>
                         <div class="viewe-logo">
-                            <div class="login-logo"><img src="login-logo.png" alt=""><span>Admin</span></div>
+                            <div class="login-logo"><img src="login-logo.png" alt=""><span style="color: white;">Admin</span></div>
                             <div class="date-logo"><img src="timing-logo-removebg-preview.png"
-                                    alt=""><span>25/08/2017</span></div>
+                                    alt=""><span style="color: white;">25/08/2017</span></div>
                         </div>
                     </div>
                 </div>
                 <div class="viewe-info"><img src="card-3bg.jpg" alt="">
                     <div class="viewe-detals ">
-                        <h3>A free-to-play survival shooter accessible to almost all smartphones across the globe.</h3>
+                        <h3 style="color: white;">A free-to-play survival shooter accessible to almost all smartphones across the globe.</h3>
                         <div class="viewe-logo">
-                            <div class="login-logo"><img src="login-logo.png" alt=""><span>Admin</span></div>
+                            <div class="login-logo"><img src="login-logo.png" alt=""><span style="color: white;">Admin</span></div>
                             <div class="date-logo"><img src="timing-logo-removebg-preview.png"
-                                    alt=""><span>10/02/2019</span></div>
+                                    alt=""><span style="color: white;">10/02/2019</span></div>
                         </div>
                     </div>
                 </div>
                 <div class="viewe-info"><img src="card-4bg.jpg" alt="">
                     <div class="viewe-detals ">
-                        <h3>The game, which was inspired by the Japanese film Battle Royale (2000), is based on previous
+                        <h3 style="color: white;">The game, which was inspired by the Japanese film Battle Royale (2000), is based on previous
                             mods created by </h3>
                         <div class="viewe-logo">
-                            <div class="login-logo"><img src="login-logo.png" alt=""><span>Admin</span></div>
+                            <div class="login-logo"><img src="login-logo.png" alt=""><span style="color: white;">Admin</span></div>
                             <div class="date-logo"><img src="timing-logo-removebg-preview.png"
-                                    alt=""><span>07/05/2000</span></div>
+                                    alt=""><span style="color: white;">07/05/2000</span></div>
                         </div>
                     </div>
                 </div>
                 <div class="viewe-info"><img src="card-5bg.png" alt="">
                     <div class="viewe-detals ">
-                        <h3>HAMZA HUSSAIN </h3>
+                        <h3 style="color: white;">HAMZA HUSSAIN </h3>
                         <div class="viewe-logo">
-                            <div class="login-logo"><img src="login-logo.png" alt=""><span>Admin</span></div>
+                            <div class="login-logo"><img src="login-logo.png" alt=""><span style="color: white;">Admin</span></div>
                             <div class="date-logo"><img src="timing-logo-removebg-preview.png"
-                                    alt=""><span>10/22/2025</span></div>
+                                    alt=""><span style="color: white;">10/22/2025</span></div>
                         </div>
                     </div>
                 </div>
@@ -221,10 +221,10 @@
         <div class="footer-info">
             <div class="footer-detal">
                 <div class="socail-detal">
-                    <h3>Made by Hamza Hussain
+                    <h3 style="color: white;">Made by Hamza Hussain
                         Web Developer & Designer</h3>
                     <div class="socail-link">
-                        <h3>Socail LINK</h3>
+                        <h3 style="color: white;">Socail LINK</h3>
                         <a href=""> <img src="facebook-img.png" alt=""></a>
                         <a href=""> <img src="twitter-img.png" alt=""></a>
                         <a href=""><img src="whatsapp-img.jpg" alt=""></a>
@@ -233,15 +233,16 @@
                 <div class="profile">
                     <img src="profile-img.jpg" alt="">
                     <div class="profile-name">
-                        <h2>Name / credit</h2>
+                        <h2 style="color: white;">Name / credit</h2>
                         <h3>HAMZA HUSSAIN</h3>
-                        <h2>GMAIL</h2>
+                        <h2 >GMAIL</h2>
                         <a href=""><h3>HAMZAHUSSAIN@GMAIL.COM</h3></a>
                     </div>
 
                 </div>
                 <div class="footer-last">
-                    <span>&copy 2025 Hamza Hussain. All rights reserved </span>
+                        <h2 >GMAIL</h2>
+                    <span >&copy 2025 Hamza Hussain. All rights reserved </span>
                 </div>
             </div>
         </div>
@@ -250,5 +251,6 @@
 
 
 </html>
+
 
 
