--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
         <div class="footer-info">
             <div class="footer-detal">
                 <div class="socail-detal">
-                    <h3 style="color: white;">Made by Hamza Hussain
+                    <h3>Made by Hamza Hussain
                         Web Developer & Designer</h3>
                     <div class="socail-link">
-                        <h3 style="color: white;">Socail LINK</h3>
+                        <h3>Socail LINK</h3>
                         <a href=""> <img src="facebook-img.png" alt=""></a>
                         <a href=""> <img src="twitter-img.png" alt=""></a>
                         <a href=""><img src="whatsapp-img.jpg" alt=""></a>
@@ -233,7 +233,7 @@
                 <div class="profile">
                     <img src="profile-img.jpg" alt="">
                     <div class="profile-name">
-                        <h2 style="color: white;">Name / credit</h2>
+                        <h2>Name / credit</h2>
                         <h3>HAMZA HUSSAIN</h3>
                         <h2 >GMAIL</h2>
                         <a href=""><h3>HAMZAHUSSAIN@GMAIL.COM</h3></a>
@@ -241,7 +241,6 @@
 
                 </div>
                 <div class="footer-last">
-                        <h2 >GMAIL</h2>
                     <span >&copy 2025 Hamza Hussain. All rights reserved </span>
                 </div>
             </div>
@@ -251,6 +250,7 @@
 
 
 </html>
+
 
 
 
